force-app/main/default/objects/Apttus_Config2__PriceList__c/Apttus_Config2__PriceList__c.object-meta.xml
<CustomObject>
    <description>Represents a price list that contains the list of products the organization sells</description>
    <label>Price List</label>
    <nameField>
        <label>Price List Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Price Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>