force-app/main/default/objects/Apttus_Config2__PriceList__c/fields/Apttus_Config2__BasedOnAdjustmentAmount__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__BasedOnAdjustmentAmount__c</fullName>
    <description>The adjustment amount.to apply to the based on price</description>
    <inlineHelpText>The adjustment amount.to apply to the based on price</inlineHelpText>
    <label>Based On Adjustment Amount</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>