force-app/main/default/objects/Apttus_Config2__PriceList__c/fields/Apttus_Config2__BasedOnAdjustmentType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__BasedOnAdjustmentType__c</fullName>
    <description>The adjustment type to apply to the based on price</description>
    <inlineHelpText>The adjustment type to apply to the based on price</inlineHelpText>
    <label>Based On Adjustment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>% Discount</fullName>
            </value>
            <value>
                <fullName>Discount Amount</fullName>
            </value>
            <value>
                <fullName>% Markup</fullName>
            </value>
            <value>
                <fullName>Markup Amount</fullName>
            </value>
            <value>
                <fullName>Price Factor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>