force-app/main/default/objects/Apttus_Config2__PriceList__c/fields/Apttus_Config2__BasedOnPriceListId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__BasedOnPriceListId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the price list this is based on</description>
    <label>Based On Price List</label>
    <referenceTo>Apttus_Config2__PriceList__c</referenceTo>
    <relationshipLabel>Derived Price Lists</relationshipLabel>
    <relationshipName>DerivedPriceLists</relationshipName>
    <type>Lookup</type>
</CustomField>