force-app/main/default/objects/Apttus_Config2__PriceList__c/fields/Apttus_Config2__ContractNumber__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ContractNumber__c</fullName>
    <description>The contract number associated with the price list.</description>
    <label>Contract Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>