force-app/main/default/objects/Apttus_Config2__PriceList__c/fields/Apttus_Config2__DisableBasedOnCurrencyAdjustment__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__DisableBasedOnCurrencyAdjustment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether currency adjustment is disabled when the currency of the price list and the based on price list are different in a multi-currency enabled org</description>
    <inlineHelpText>Indicates whether currency adjustment is disabled when the currency of the price list and the based on price list are different in a multi-currency enabled org</inlineHelpText>
    <label>Disable Based On Currency Adjustment</label>
    <type>Checkbox</type>
</CustomField>