force-app/main/default/objects/Apttus_Config2__PriceList__c/fields/Apttus_Config2__EffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__EffectiveDate__c</fullName>
    <description>The price list effective date. The price list becomes effective on this date and time.</description>
    <label>Effective Date</label>
    <type>DateTime</type>
</CustomField>