force-app/main/default/objects/Apttus_Config2__PriceList__c/fields/Apttus_Config2__ExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ExpirationDate__c</fullName>
    <description>The price list expiration date. The price list becomes ineffective after this date and time.</description>
    <label>Expiration Date</label>
    <type>DateTime</type>
</CustomField>