force-app/main/default/objects/Apttus_Config2__PriceList__c/listViews/Apttus_Config2__All.listView-meta.xml
<ListView>
    <fullName>Apttus_Config2__All</fullName>
    <columns>NAME</columns>
    <columns>Apttus_Config2__Description__c</columns>
    <columns>Apttus_Config2__EffectiveDate__c</columns>
    <columns>Apttus_Config2__ExpirationDate__c</columns>
    <columns>Apttus_Config2__Active__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>